--- a/Hypothesis_power_function.ipynb
+++ b/Hypothesis_power_function.ipynb
@@ -29,9 +29,9 @@
     "### Power Function:\n",
     "\n",
     "\n",
-    "The power function ($ \\text{Power}(\\theta) $) is defined as the probability of rejecting the null hypothesis when the true parameter value is $\\theta$. Mathematically, it is given by:\n",
+    "The power function $ \\gamma(\\theta) $ is defined as the probability of rejecting the null hypothesis when the true parameter value is $\\theta$. Mathematically, it is given by:\n",
     "\n",
-    "$$ \\text{Power}(\\theta) = P(\\text{Reject } H_0 \\mid \\theta = \\theta) $$\n",
+    "$$ \\gamma(\\theta) = P(\\text{Reject } H_0 \\mid \\theta = \\theta) $$\n",
     "\n",
     "### Two-sided example:\n",
     "\n",
@@ -42,7 +42,7 @@
     "  $ \\theta \\neq \\theta_1 $\n",
     "\n",
     "\\begin{align*}\n",
-    "\\text{Power}(\\theta) &= P(\\text{Reject } H_0 \\mid \\theta = \\theta) \\\\\n",
+    "\\gamma(\\theta) &= P(\\text{Reject } H_0 \\mid \\theta = \\theta) \\\\\n",
     "&= P\\left(\\left|Z \\right| \\geq Z_{crit} \\mid \\theta = \\theta\\right)     \\\\\n",
     "&= P\\left(\\left|\\frac{\\bar{X} - \\theta_0}{\\frac{\\sigma}{\\sqrt{N}}} \\right| \\geq Z_{crit} \\mid \\theta = \\theta \\right) \\\\\n",
     "&= P\\left(\\frac{\\bar{X} - \\theta_0}{\\frac{\\sigma}{\\sqrt{N}}} \\geq Z_{crit} \\mid \\theta = \\theta \\right) + P\\left(\\frac{\\bar{X} - \\theta_0}{\\frac{\\sigma}{\\sqrt{N}}} < -Z_{crit} \\mid \\theta = \\theta \\right) \\\\\n",
@@ -60,7 +60,7 @@
     "  $ \\theta \\geq \\theta_1 $\n",
     "\n",
     "\\begin{align*}\n",
-    "\\text{Power}(\\theta) &= P(\\text{Reject } H_0 \\mid \\theta = \\theta) \\\\\n",
+    "\\gamma(\\theta) &= P(\\text{Reject } H_0 \\mid \\theta = \\theta) \\\\\n",
     "&= P\\left(Z \\geq Z_{crit} \\mid \\theta = \\theta\\right)     \\\\\n",
     "&= P\\left(\\frac{\\bar{X} - \\theta_0}{\\frac{\\sigma}{\\sqrt{N}}}  \\geq Z_{crit} \\mid \\theta = \\theta \\right) \\\\\n",
     "&= P\\left(\\frac{\\bar{X} - \\theta_0}{\\frac{\\sigma}{\\sqrt{N}}} \\geq Z_{crit} \\mid \\theta = \\theta \\right)  \\\\\n",
@@ -206,14 +206,14 @@
     "**Definition:**  \n",
     "The size of a test, denoted by $ \\alpha $, is defined as  \n",
     "  \n",
-    "$\\alpha = \\sup_{\\theta \\in \\Theta_0} \\text{Power}(\\theta)$  \n",
+    "$\\alpha = \\sup_{\\theta \\in \\Theta_0} \\gamma(\\theta)$  \n",
     "  \n",
-    "which we read as \"the supremum of the power $ \\text{Power}(\\theta) $ over all $ \\theta \\in \\Theta_0 $\". More simply put, the size is the maximum power over the null space. The size is thus the largest probability of a Type I error over all $ \\theta \\in \\Theta_0 $.\n",
+    "which we read as \"the supremum of the power $ \\gamma(\\theta) $ over all $ \\theta \\in \\Theta_0 $\". More simply put, the size is the maximum power over the null space. The size is thus the largest probability of a Type I error over all $ \\theta \\in \\Theta_0 $.\n",
     "\n",
     "**Special Case:**  \n",
     "If the null space contains a single point, say $\\Theta_0 = \\{\\theta_0 \\}$, then the size is  \n",
     "  \n",
-    "$\\alpha = \\sup_{\\theta \\in \\{\\theta_0 \\}} \\text{Power}(\\theta) = \\text{Power}(\\theta_0)$.  \n",
+    "$\\alpha = \\sup_{\\theta \\in \\{\\theta_0 \\}} \\gamma(\\theta) = \\gamma(\\theta_0)$.  \n",
     "  \n",
     "\n",
     "**Trade-off:**  \n",
