--- a/Q-Q plots.ipynb
+++ b/Q-Q plots.ipynb
@@ -1,24 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# ADD QQ PLOTS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "from scipy import stats"
+    "# Introduction to Q-Q Plot\n",
+    "\n",
+    "Quantile-Quantile (Q-Q) plots are powerful tools in statistical analysis for comparing the distribution of observed data to a theoretical distribution. The Q-Q plot visually represents how closely the quantiles of the observed data align with the quantiles of the theoretical distribution. The mathematical formulation and algorithmic steps are outlined below:\n",
+    "\n",
+    "## Algorithm Steps:\n",
+    "\n",
+    "### 1. Sort the Data:\n",
+    "   - Let $x_1, x_2, \\ldots, x_n $ be the ordered observations from the dataset.\n",
+    "\n",
+    "### 2. Calculate Theoretical Quantiles:\n",
+    "   - Let $F(x) $ represent the cumulative distribution function (CDF) of the theoretical distribution.\n",
+    "   - The theoretical quantiles $q_i $ corresponding to the ordered data points are given by $q_i = F^{-1}\\left(\\frac{i - 0.5}{n}\\right) $, for $i \\in 1 \\ldots N$, where $F^{-1} $ is the inverse of the CDF.\n",
+    "\n",
+    "### 3. Plot the Points:\n",
+    "   - Construct a scatter plot with the x-axis representing the theoretical quantiles $q_i $ and the y-axis representing the observed quantiles $x_i $.\n",
+    "\n",
+    "### 4. Draw a Reference Line:\n",
+    "- Include a reference line on the plot, typically a line passing through the 25th and 75th quantiles, indicating expected alignment between observed and theoretical quantiles under the assumption of a perfectly normal distribution.\n",
+    "\n",
+    "### 5. Assess Deviations:\n",
+    "   - Deviations from the reference line provide visual cues regarding differences between the observed and theoretical quantiles.\n",
+    "\n",
+    "### 6. Interpretation:\n",
+    "   - Analyze the patterns in the Q-Q plot. Points close to the reference line suggest a good match, while systematic deviations may indicate discrepancies in distribution.\n"
    ]
   },
   {
