--- a/3. Tests for One Sample.ipynb
+++ b/3. Tests for One Sample.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,15 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z-statistic:  0.6174 \n",
-      "p-value:  0.5370 \n",
+      "z-statistic:  1.5003 \n",
+      "p-value:  0.1335 \n",
       "z-critical:  1.9600\n",
       "Reject H0: False\n"
      ]
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z-statistic:  1.9855 \n",
-      "p-value:  0.0471 \n",
+      "z-statistic:  2.7431 \n",
+      "p-value:  0.0061 \n",
       "z-critical:  1.9600\n",
       "Reject H0: True\n"
      ]
@@ -228,15 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-statistic:  2.0860 \n",
-      "p-value:  0.0376 \n",
+      "t-statistic:  2.7349 \n",
+      "p-value:  0.0065 \n",
       "z-critical:  1.9663\n",
       "Reject H0: True\n"
      ]
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,17 +310,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z-statistic: -2.0000 \n",
-      "p-value:  0.0455 \n",
+      "\"0\" has 53 counts.\n",
+      "\"1\" has 47 counts.\n",
+      "All value counts are greater then 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "counts = Counter(x)\n",
+    "for key in counts:\n",
+    "    print(f'\"{key}\" has {counts[key]} counts.')\n",
+    "    assert counts[key] >= 5\n",
+    "print('All value counts are greater then 5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z-statistic: -0.6000 \n",
+      "p-value:  0.5485 \n",
       "z-critical:  1.9600\n",
-      "Reject H0: True\n"
+      "Reject H0: False\n"
      ]
     }
    ],
