--- a/8. Chi squared for categorical data.ipynb
+++ b/8. Chi squared for categorical data.ipynb
@@ -34,15 +34,7 @@
     "\n",
     "- **Null Hypothesis ($H_0$):** The observed and expected frequencies are consistent; there is no significant difference between the observed and expected distributions.\n",
     "\n",
-    "- **Alternative Hypothesis ($H_1$):** There is a significant difference between the observed and expected distributions.\n",
-    "\n",
-    "### Interpretation:\n",
-    "\n",
-    "- If the calculated $\\chi^2$ value is greater than the critical $\\chi^2$ value, the null hypothesis is rejected, suggesting a significant difference.\n",
-    "\n",
-    "- If the calculated $\\chi^2$ value is less than the critical $\\chi^2$ value, there is insufficient evidence to reject the null hypothesis.\n",
-    "\n",
-    "The chi-squared goodness-of-fit test is widely used in various fields, such as market research, biology, and social sciences, to assess whether the observed distribution of categorical data differs significantly from the expected distribution.\n"
+    "- **Alternative Hypothesis ($H_1$):** There is a significant difference between the observed and expected distributions.\n"
    ]
   },
   {
@@ -70,46 +62,14 @@
     "  - Public Transportation: 70\n",
     "  - Bicycles: 40\n",
     "\n",
-    "### Assumptions:\n",
+    "**Assumptions:**\n",
     "\n",
     "1. Categorical Data\n",
     "2. Independent Observations\n",
     "3. Expected Frequencies > 5\n",
     "\n",
-    "### Calculation:\n",
     "\n",
-    "The chi-squared statistic ($\\chi^2$) is calculated using the formula:\n",
-    "\n",
-    "$$ \\chi^2 = \\sum \\frac{(O_i - E_i)^2}{E_i} $$\n",
-    "\n",
-    "where $O_i$ is the observed frequency, $E_i$ is the expected frequency, and the sum is taken over all categories.\n",
-    "\n",
-    "### Degrees of Freedom:\n",
-    "\n",
-    "$df = k - 1$ where $k$ is the number of categories.\n",
-    "\n",
-    "### Decision Rule:\n",
-    "\n",
-    "Compare the calculated $\\chi^2$ value against the critical $\\chi^2$ value at a chosen significance level.\n",
-    "\n",
-    "### Solution:\n",
-    "\n",
-    "1. Calculate the expected frequencies based on the proportions.\n",
-    "   - Expected Cars: $0.40 \\times 200 = 80$\n",
-    "   - Expected Public Transportation: $0.30 \\times 200 = 60$\n",
-    "   - Expected Bicycles: $0.30 \\times 200 = 60$\n",
-    "\n",
-    "2. Apply the chi-squared formula to obtain the test statistic.\n",
-    "\n",
-    "3. Determine the critical $\\chi^2$ value at the chosen significance level (e.g., 0.05) with $df = 2 - 1 = 1$.\n",
-    "\n",
-    "4. Compare the calculated $\\chi^2$ value with the critical value.\n",
-    "\n",
-    "### Conclusion:\n",
-    "\n",
-    "If the calculated $\\chi^2$ value exceeds the critical value, we reject the null hypothesis, indicating a significant difference between the observed and expected distributions. If not, we fail to reject the null hypothesis.\n",
-    "\n",
-    "This example illustrates the application of the chi-squared goodness-of-fit test in analyzing categorical data.\n"
+    "\n"
    ]
   },
   {
@@ -119,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-statistic:  9.5833 \n",
+      "chi2-statistic:  9.5833 \n",
       "p-value:  0.0083 \n",
-      "t-critical:  5.9915\n",
+      "chi2-critical:  5.9915\n",
       "Reject H0: True\n"
      ]
     }
@@ -162,7 +122,7 @@
     "\n",
     "\n",
     "# Output results\n",
-    "print(f't-statistic: {chi2_statistic: 3.4f} \\np-value: {p_value: 3.4f} \\nt-critical: {chi2_critical: 3.4f}')\n",
+    "print(f'chi2-statistic: {chi2_statistic: 3.4f} \\np-value: {p_value: 3.4f} \\nchi2-critical: {chi2_critical: 3.4f}')\n",
     "print('Reject H0:', p_value < alpha)\n"
    ]
   },
