--- a/10. Multiarmed Bandits.ipynb
+++ b/10. Multiarmed Bandits.ipynb
@@ -413,7 +413,7 @@
     "\n",
     "The concept of 'conjugate priors' simplifies the estimation process when prior and posterior distributions belong to the same family. For instance, in the context of measuring a click-through rate with a Bernoulli distribution as the likelihood, the conjugate prior is a Beta distribution:\n",
     "\n",
-    "$$ θ ∼ Beta(a, b) = θ^{a-1}(1−θ)^{b-1}B(a, b) $$\n",
+    "$$ θ ∼ Beta(a, b) = \\frac{θ^{a-1}(1−θ)^{b-1}}{B(a, b)} $$\n",
     "\n",
     "where $ B(a, b) $ is the Beta function.\n",
     "\n",
